# did-mobile

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/blocs/appScreenState/: appNavigator.dart
lib/blocs/createDid/: createDidBloc.dart  createDidState.dart  formSubmissionStatus.dart
lib/blocs/language/: languageEvent.dart  languageState.dart
lib/components/: CustomTextFields.dart  minimalChangeLanguage.dart  noti.dart
lib/custom_icons/: quader_font.dart
lib/data/: commonBackendRepo.dart  countries.dart  createDidRepository.dart  dataRepository.dart
lib/db/: local_database.dart
lib/globalComponents/: changeSingleValueWithExpandIcon.dart  credential.dart  minimalChangeLanguage.dart  noti.dart
lib/global_components/: access_right.dart  alert.dart  bottom_Sheet_drag_handle.dart  changeLanguage.dart  change_language.dart  change_single_value_with_expand_icon.dart  credential.dart  credential_row.dart  empty.dart  material_bottom_sheet.dart  minimalChangeLanguage.dart  minimal_change_language.dart  noti.dart  table_header.dart  universal_text_field.dart
lib/l10n/: intl_de.arb  intl_en.arb
lib/models/: did.dart
lib/models/access_vc/: access_vc.dart  credential_subject.dart
lib/models/allergy/: allergy.dart
lib/models/did/: authentication.dart  credential.dart  credential_subject.dart  did.dart  did_vc_combination.dart  doc.dart  identity.dart
lib/models/dynamic_credential/: dynamic_credential.dart
lib/models/file_type_data/: file_type_data.dart
lib/models/medication/: medication.dart
lib/models/patient_questionnaire/: patient_questionnaire.dart
lib/models/personal_data_vc/: credential_subject.dart  personal_data_vc.dart
lib/screens/: loadingView.dart  sessionView.dart
native/iota-did/: Cargo.toml
native/iota-did-ffi/: Cargo.toml
native/iota-did-ffi/src/: lib.rs
native/iota-did/src/: lib.rs
native/streams/: Cargo.toml
native/streams-ffi/: Cargo.toml
native/streams-ffi/src/: lib.rs
native/streams/src/: lib.rs  structs.rs  utils.rs
native/streams/src/utils/: create_seed.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+154 files in other folders)
