[package]
name = "iota-did-ffi"
version = "0.1.0"
authors = ["JonasHiltl <jonashiltl2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iota_did_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
iota-did = { path = "../iota-did" }
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev"}
allo-isolate = "0.1.7"
tokio = { version = "0.2", features = ["rt-threaded"] }
lazy_static = "1.4"