[package]
name = "iota-did"
version = "0.1.0"
authors = ["JonasHiltl <jonashiltl2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev"}
rand = { version = "0.8" }
tokio = { version = "1.5", features = ["full"] }
serde = "1.0.126"
serde_json = "1.0.64"