[package]
name = "streams-ffi"
version = "0.1.0"
authors = ["JonasHiltl <jonashiltl2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "streams_ffi"
crate-type = ["cdylib", "staticlib"]

targets = [
  "aarch64-apple-ios",
  "aarch64-linux-android",
  "armv7-linux-androideabi",
  "i686-linux-android",
  "x86_64-apple-ios",
  "x86_64-linux-android",
]

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop"}
streams = { path = "../streams" }
allo-isolate = "0.1.7"
tokio = { version = "0.2", features = ["rt-threaded"] }
lazy_static = "1.4"
ffi_helpers = "0.2"