[package]
name = "streams"
version = "0.1.0"
authors = ["JonasHiltl <jonashiltl2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop"}
rand = "0.7.3"
tokio = { version = "1.5", features = ["full"] }
serde = "1.0.126"
serde_json = "1.0.64"
dotenv = { version = "0.15.0"}
